--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
         </dependency>
     </dependencies>
 
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-devtools</artifactId>
+    </dependency>
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
